# bubbola-gare

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.json  search.py
analysis/: benchmark_nlq.py  plot_embeddings.py  test_files.py
bubbola_gare/: __init__.py  __main__.py  cli.py  costs.py  llm.py  models.py  pdf_pipeline.py
src/bubbola_gare/: __init__.py  config.py  data_io.py  db_loader.py  db_prepare.py  embedding.py  pipeline.py  preprocessing.py  search.py  summarization.py
src/bubbola_gare/service/: analytics.py  api.py  chat_gateway.py  db.py  mcp_server.py
